# carbon_dynamics_spain

./: .gitignore  0_data_preparation_recipe.py  1_canopy_height_prediction_recipe.py  2_biomass_estimation_recipe.py  3_analysis_recipe.py  README.md  pyproject.toml
als_pnoa/: README.md  __init__.py  config.yml
biomass_analysis/: README.md  __init__.py  biomass_country_trend.py  biomass_trend_per_forest_type.py  biomass_trend_per_height_bin.py  biomass_trend_per_landcover.py  calculate_change_spatial_autocorrelation.py  calculate_interannual_carbon_fluxes.py  calculate_transition_distributions.py  config.yaml  config.yml  map_interannual_differences.py
biomass_model/: README.md  __init__.py  allometry.py  biomass_config.yml  biomass_dask.yml  biomass_estimation.py  biomass_readme.md  config.py  config.yml  config_fitting.yaml  dask_utils.py  default_config.yaml  fit_allometries.py  fitting_utils.py  forest_type_cache.csv  io_utils.py  logging_utils.py  mask_annual_cropland.py  merge_forest_types.py  monte_carlo.py
canopy_height_model/: README.md  __init__.py  balanced_geo_samplers.py  canopy_height_regression.py  config.yml  merge_predictions.py  model_evaluation.py  model_prediction.py  model_training.py  pnoa_vegetation_transforms.py  postprocess_pipeline.py  readme_canopy_height.md  sanitize_predictions.py
canopy_height_model_old/: config.py  datasets.py  deafult_config.yaml  dl_env.yml  downsample_merge.py  height_regression_losses.py  prediction_writer.py  s2_pnoa_vegetation_datamodule.py
climate_biomass_analysis/: README.md  __init__.py  bioclim_calculation.py  climate_analysis_config.yml  config.yml  (+5 more)
(+142 files in other folders)
