[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon_dynamics_spain"
version = "0.1.0"
description = "Recent climate change reduced Spanish forests' carbon sink capacity"
authors = [
    {name = "Diego Bengochea", email = "diego.bengochea@mncn.csic.es"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

# Define your package dependencies here
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "black", 
    "flake8"
]

[tool.setuptools.packages.find]
# This tells setuptools to find all your packages automatically
# It will find: forest_inventory, biomass_model, shared_utils, etc.
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]